<resources xmlns:xliff="http://schemas.android.com/tools">

    <string name="facebook_app_id">620197801495528</string>
    <string name="search_input">请输入查询内容</string>
    <string name="app_name">惠券在握</string>
    <string name="detail_notice">优惠详情及注意事项</string>
    <string name="shake2share">想和朋友一起分享优惠吗，马上摇一摇吧~\n长按你想分享的内容或图片，同样可快速分享喔！</string>

    <string name="text_appname">惠券在握</string>
    <string name="update">版本更新</string>
    <string name="update_1">当前为最新版本</string>
    <string name="feed">问题与建议反馈</string>
    <string name="shareapp">分享惠券在握</string>
    <string name="from">版权所有\n\nDesigned and Developed by Willpon</string>
    <string name="qrcode">1.扫一扫二维码立即下载</string>
    <string name="downloadurl">2.分享下载链接</string>
    <string name="menu_share">分享给好友</string>
    <string name="menu_map">寻找最近的店家</string>
    <string name="menu_home">返回首页</string>

    <string name="home_bus1">速食店</string>
    <string name="home_bus2">便利商店</string>
    <string name="home_bus3">餐厅美食</string>
    <string name="home_bus1_kfc">肯德基</string>
    <string name="home_bus1_mc">麦当劳</string>
    <string name="home_bus1_bk">汉堡王</string>

    <string name="msg_subscribed">Subscribed to news topic</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>




</resources>
