<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDF2F4">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_color_orange"
        android:orientation="horizontal"
        android:baselineAligned="true"
        android:id="@+id/titleblue">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">
            <ImageButton
                android:id="@+id/back"
                android:layout_width="25dp"
                android:layout_height="22dp"
                android:layout_centerInParent="false"
                android:layout_centerHorizontal="false"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:onClick="backbtn"
                android:background="@drawable/back" />

            <TextView
                android:text="关于我们"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="40px"
                android:id="@+id/title"
                android:textColor="@color/white"
                android:layout_centerInParent="true"
                />

            <Button android:id="@+id/gomap"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@color/background_color_orange"
                android:layout_alignParentRight="true"
                android:layout_marginRight="5sp"
                />
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="400px">


        <ImageView
            android:layout_width="160px"
            android:layout_height="160px"
            app:srcCompat="@drawable/icon"
            android:id="@+id/imageView2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80px"/>

        <TextView
            android:text="@string/text_appname"
            android:textColor="#000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_appname"
            android:layout_below="@id/imageView2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10px"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_buildnum"
            android:layout_below="@id/text_appname"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10px"/>
    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="390px"
        android:background="@android:color/white">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/update">

            <TextView
                android:text="@string/update"
                android:textColor="#000000"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="130px"
                android:gravity="center_vertical"
                android:layout_marginLeft="30px"


                android:layout_weight="1" />
            <TextView
                android:text="@string/update_1"

                android:textSize="15sp"
                android:layout_width="match_parent"
                android:layout_height="130px"
                android:gravity="right|center_vertical"
                android:layout_marginRight="30px"


                android:layout_weight="1" />
        </LinearLayout>
        <ImageView
            android:id="@+id/imageView"
            android:layout_marginTop="0dip"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/listline"
            android:layout_marginLeft="30px"
            android:layout_marginRight="30px" />
        <TextView
            android:text="@string/feed"
            android:textColor="#000000"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="130px"
            android:gravity="center_vertical"
            android:layout_marginLeft="30px"

            android:id="@+id/feed" />
        <ImageView
            android:id="@+id/line2"
            android:layout_marginTop="0dip"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/listline"
            android:layout_marginLeft="30px"
            android:layout_marginRight="30px" />
        <TextView
            android:text="@string/shareapp"
            android:textColor="#000000"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="130px"
            android:gravity="center_vertical"
            android:layout_marginLeft="30px"

            android:id="@+id/shareapp" />
    </LinearLayout>

    <TextView
        android:text="@string/from"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/from"
        android:gravity="bottom|center_horizontal"
        android:layout_marginBottom="20px" />

</LinearLayout>